[package]
name = "taotie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
arrow = { version = "52.1.0", features = ["prettyprint"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.11", features = ["derive"] }
datafusion = { version = "40.0.0", features = ["serde"] }
parquet = "52.1.0"
polars = { version = "0.41.3", features = [
    "parquet",
    "timezones",
    "sql",
    "lazy",
] }
reedline-repl-rs = { version = "1.1.1", features = ["derive"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
crossbeam-channel = "0.5.12"
enum_dispatch = "0.3.13"
oneshot = "0.1.8"
dirs = "5.0.1"
